HDPI-8796: multiple defendants PDF link